@@ -3,15 +3,17 @@ plugins {
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.10.RELEASE'
   id 'org.springframework.boot' version '2.4.4'
-  id 'org.owasp.dependencycheck' version '6.0.3'
+  id 'org.owasp.dependencycheck' version '6.5.3'
   id 'com.github.ben-manes.versions' version '0.36.0'
   id 'org.sonarqube' version '3.0'
   id 'uk.gov.hmcts.java' version '0.11.0'
   id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.23'
 }
 
-ext['spring-framework.version'] = '5.3.7'
+ext['spring-framework.version'] = '5.3.20'
 ext['spring-security.version'] = '5.4.5'
+ext['log4j2.version'] = '2.17.1'
+ext['jackson.version'] = '2.13.2'
 
 allprojects {
   sourceCompatibility = '11'
@@ -122,6 +124,14 @@ task integration(type: Test) {
   shouldRunAfter test
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+  // The line below prevents the build from failing if the Fortify scan detects issues
+  ignoreExitValue = true
+}
+
 task smoke(type: Test) {
   description = 'Executes smoke tests against an the CCD Data Store API instance just deployed'
   dependsOn aatClasses
@@ -224,7 +234,6 @@ cucumberReports {
 
 repositories {
   mavenLocal()
-  jcenter()
   mavenCentral()
   maven {
     url "https://jitpack.io"
@@ -234,11 +243,12 @@ repositories {
 def versions = [
   junit           : '5.7.0',
   junitPlatform   : '1.7.0',
-  reformLogging   : '5.1.5',
+  reformLogging   : '5.1.9',
   junitVintageVersion : '5.7.0',
   springBoot      : springBoot.class.package.implementationVersion,
   springfoxSwagger: '3.0.0',
-  testcontainers  : '1.15.1'
+  testcontainers  : '1.15.1',
+  netty           : '4.1.77.Final'
 ]
 
 ext.libraries = [
@@ -253,6 +263,9 @@ ext.libraries = [
 ]
 
 dependencies {
+  compile "com.fasterxml.jackson.core:jackson-databind:2.13.2.2"
+  compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.2'
+  compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jaxb-annotations', version: '2.13.2'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.1'
 
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
@@ -266,27 +279,31 @@ dependencies {
     exclude group: 'org.simpleframework', module: 'simple-xml' //CVE-2017-1000190
     exclude group: 'org.nanohttpd', module: 'nanohttpd' //CVE-2020-13697
   }
+  //CVE-2021-22119
+  implementation (group: 'org.springframework.security', name:'spring-security-crypto', 'version':'5.4.7')
+  // CVE-2021-43797
+  implementation group: 'io.netty', name:'netty-buffer', version: versions.netty
+  implementation group: 'io.netty', name:'netty-codec', version: versions.netty
+  implementation group: 'io.netty', name:'netty-codec-http', version: versions.netty
+  implementation group: 'io.netty', name:'netty-common', version: versions.netty
+  implementation group: 'io.netty', name:'netty-handler', version: versions.netty
+  implementation group: 'io.netty', name:'netty-resolver', version: versions.netty
+  implementation group: 'io.netty', name:'netty-transport', version: versions.netty
+  implementation group: 'io.netty', name:'netty-transport-native-epoll', version: versions.netty
+  implementation group: 'io.netty', name:'netty-transport-native-kqueue', version: versions.netty
+  implementation group: 'io.netty', name:'netty-transport-native-unix-common', version: versions.netty
 
-  implementation (group: 'org.springframework.security', name:'spring-security-crypto', 'version':'5.4.5') //For CVE-2021-22112
-
-  implementation group: 'io.netty', name:'netty-buffer', version:'4.1.61.Final' //For CVE-2021-21295
-  implementation group: 'io.netty', name:'netty-codec', version:'4.1.61.Final' //For CVE-2021-21295
-  implementation group: 'io.netty', name:'netty-codec-http', version:'4.1.61.Final' //For CVE-2021-21295
-  implementation group: 'io.netty', name:'netty-common', version:'4.1.61.Final' //For CVE-2021-21295
-  implementation group: 'io.netty', name:'netty-handler', version:'4.1.61.Final' //For CVE-2021-21295
-  implementation group: 'io.netty', name:'netty-resolver', version:'4.1.61.Final' //For CVE-2021-21295
-  implementation group: 'io.netty', name:'netty-transport', version:'4.1.61.Final' //For CVE-2021-21295
-  implementation group: 'io.netty', name:'netty-transport-native-epoll', version:'4.1.61.Final' //For CVE-2021-21295
-  implementation group: 'io.netty', name:'netty-transport-native-kqueue', version:'4.1.61.Final' //For CVE-2021-21295
-  implementation group: 'io.netty', name:'netty-transport-native-unix-common', version:'4.1.61.Final' //For CVE-2021-21295
+  implementation group: 'org.glassfish', name: 'jakarta.el', version: '4.0.1' // CVE-2021-28170
+  // CVE-2021-42550
+  implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.10'
+  implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.10'
 
   implementation group: 'io.hawt', name: 'hawtio-springboot', version: '2.12.0'
 
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
 
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
-  implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
 
   implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.12.1'
 
@@ -297,18 +314,19 @@ dependencies {
   implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13' // For CVE-2020-13956
   implementation group: 'org.apache.activemq', name: 'activemq-client', version: '5.16.1' // For CVE-2021-26117
   implementation group: 'org.apache.activemq', name: 'activemq-broker', version: '5.16.1' // For CVE-2021-26117
+  implementation group: 'net.minidev', name: 'json-smart', version: '2.4.7'
+  implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
 
+  compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.63'
+  compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.63'
 
-  compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
-  compile group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.14.0'
-  compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.43'
-  compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.43'
-
-  runtime group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
+  runtime group: 'org.postgresql', name: 'postgresql', version: '42.3.5'
   runtime group: 'com.zaxxer', name: 'HikariCP', version: '4.0.2'
 
-  aatImplementation group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
+  aatImplementation group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.14.0'
+  aatImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.1'
   aatImplementation group: 'org.apache.poi', name: 'poi-ooxml-schemas', version: '4.1.2' //For CVE-2019-12415
+  aatImplementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
   aatImplementation libraries.junit5
 
   testImplementation libraries.junit5
@@ -326,6 +344,7 @@ dependencies {
   integrationTestImplementation group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
 
   smokeTestImplementation sourceSets.main.runtimeClasspath
+  testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 }
 
 mainClassName = 'uk.gov.hmcts.ccd.MessagePublisherApplication'
